--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
     <head>
         <meta charset-"utf-8">
         <title>This is My Test Page</title>
+        <style>
+            #window {
+                display: flex;
+                width: 300px;
+                height: 300px;
+                background-color: cyan;
+            }    
+        </style>
     </head>
     <body>
         <h1> Welcome!</h1>
+        <div id="window">
+
+        </div>
     </body>
 </html>
