--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <body>
         <h1> Welcome!</h1>
         <div id="window">
-
+            <div>window1</div>
+        </div>
+        <div id="window2">
+            <div>Window2</div>
         </div>
     </body>
 </html>
