--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
                 width: 300px;
                 height: 300px;
                 background-color: cyan;
-            }    
+                justify-content: center;
+            }   
+            h1 {
+                display: flex;
+                justify-content: center;
+                color: red;
+            } 
+            #window2 {
+                display: flex;
+                width: 300px;
+                height: 300px;
+                background-color: fuchsia;
+                justify-content: center
+            }
         </style>
     </head>
     <body>
