--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
                 height: 300px;
                 background-color: cyan;
                 justify-content: center;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 50px;
             }   
             h1 {
                 display: flex;
@@ -21,7 +24,10 @@
                 width: 300px;
                 height: 300px;
                 background-color: fuchsia;
-                justify-content: center
+                justify-content: center;
+                margin-left: auto;
+                margin-right: auto;
+                font-size: 50px;
             }
         </style>
     </head>
