centered text and changed color to blue

--- a/index.html
+++ b/index.html
@@ -29,15 +29,20 @@
                 margin-right: auto;
                 font-size: 50px;
             }
+            .winheader {
+                display: flex;
+                align-self: center;
+                color: blue;
+            }
         </style>
     </head>
     <body>
         <h1> Welcome!</h1>
         <div id="window">
-            <div>window1</div>
+            <div class="winheader">window1</div>
         </div>
         <div id="window2">
-            <div>Window2</div>
+            <div class="winheader">Window2</div>
         </div>
     </body>
 </html>
